// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Where related tests Multiple ids 1`] = `
Array [
  Object {
    "createdAt": "2018-10-08T18:39:33.000Z",
    "customers": Array [
      "0000",
    ],
    "id": "667",
    "indication": Object {
      "id": "1",
      "name": "SCI",
    },
    "lastSessionDate": "2016-10-01T00:00:00.000Z",
    "myPatient": true,
    "patientId": "0000",
    "serialNumbers": Array [
      "21601009",
    ],
    "sessionsCount": 127001,
    "steps": 24099980,
    "upTime": 68599053,
  },
  Object {
    "createdAt": "2018-10-08T18:39:33.000Z",
    "customers": Array [
      "0001",
    ],
    "id": "668",
    "indication": Object {
      "id": "2",
      "name": "Stroke",
    },
    "lastSessionDate": "2016-10-01T00:00:00.000Z",
    "myPatient": true,
    "patientId": "0001",
    "serialNumbers": Array [
      "21601009",
    ],
    "sessionsCount": 127001,
    "steps": 24099980,
    "upTime": 68599053,
  },
]
`;

exports[`Where related tests Should handle empty relationships for related resources 1`] = `
Array [
  Object {
    "createdAt": "2018-10-08T18:39:33.000Z",
    "customers": Array [
      "0002",
    ],
    "id": "669",
    "indication": Object {
      "id": "3",
      "name": "Something Else",
    },
    "lastSessionDate": "2016-10-01T00:00:00.000Z",
    "myPatient": true,
    "patientId": "0002",
    "serialNumbers": Array [
      "21601009",
    ],
    "sessionsCount": 127001,
    "steps": 24099980,
    "upTime": 68599053,
  },
]
`;

exports[`Where related tests Should return empty array for uninitialized relationships queries 1`] = `Array []`;

exports[`Where related tests Single id 1`] = `
Array [
  Object {
    "createdAt": "2018-10-08T18:39:33.000Z",
    "customers": Array [
      "0000",
    ],
    "id": "667",
    "indication": Object {
      "id": "1",
      "name": "SCI",
    },
    "lastSessionDate": "2016-10-01T00:00:00.000Z",
    "myPatient": true,
    "patientId": "0000",
    "serialNumbers": Array [
      "21601009",
    ],
    "sessionsCount": 127001,
    "steps": 24099980,
    "upTime": 68599053,
  },
]
`;
